# LearningDXCAPI

./: CMakeLists.txt  README.md  input.hlsl  main.cpp
lib/Debug/: dxcompiler.lib
